Set toolbars fixed on top of the component with position absolute, insead of using position:fixed that overflow from compoent

--- a/client/app/list/list.component.scss
+++ b/client/app/list/list.component.scss
@@ -6,10 +6,15 @@
     #listWrapper {
         padding-top: 64px;
         position: relative;
-        overflow-y: auto;
+
+        #galleryContainer {
+            overflow-y: auto;
+            margin-top:-64px;
+            padding-top:64px;
+        }
 
         mat-toolbar {
-            position: fixed;
+            position: absolute;
             top: 0;
             left: 0;
             right: 0;
